syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service TemplateService {
    rpc CreateTemplate(CreateTemplateRequest) returns (Template) {}
    rpc GetByIDTemplate(TemplatePrimaryKey) returns (Template) {}
    rpc GetListTemplate(GetListTemplateRequest) returns (GetListTemplateResponse) {}
    rpc UpdateTemplate(UpdateTemplateRequest) returns (Template) {}
    rpc UpdatePatchTemplate(UpdatePatchTemplateRequest) returns (Template) {}
    rpc DeleteTemplate(TemplatePrimaryKey) returns (google.protobuf.Empty) {}
}

message TemplatePrimaryKey {
    string id = 1;
}

message Template {
    string id = 1;
    string name = 2;
    string created_at = 3;
    string updated_at = 4;
}

message CreateTemplateRequest {
    string name = 1;
}

message UpdateTemplateRequest {
    string id = 1;
    string name = 2;
}

message UpdatePatchTemplateRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTemplateRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListTemplateResponse {
    int32 count = 1;
    repeated Template templates = 2;
}
